<resources>
    <string name="app_name">InventoryManager</string>
    <string name="title_activity_main">Inventory Manager</string>
    <string name="component_name">Component Name</string>
    <string name="taken_by">Taken By</string>
    <string name="burrowed_date">Burrowed Date: YYYY/MM/DD</string>
    <string name="return_date">Return Date: YYYY/MM/DD</string>
    <string name="add_log">Add Log</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="form">Form</string>
    <string name="finished">Finished</string>
    <string name="unfinished">Unfinished</string>
    <string name="all">All</string>
</resources>