<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etComponentName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:importantForAutofill="no"
        android:hint="@string/component_name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etTakenBy"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:importantForAutofill="no"
        android:hint="@string/taken_by"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/burrowed_date"/>

    <EditText
        android:id="@+id/etBurrowedDate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:importantForAutofill="no"
        android:hint="@string/burrowed_date"
        android:inputType="datetime"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/return_date"/>

    <EditText
        android:id="@+id/etReturnDate"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:importantForAutofill="no"
        android:hint="@string/return_date"
        android:inputType="datetime"/>

    <Button
        android:id="@+id/btnAddLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_log"
        android:layout_marginTop="16dp"/>

</LinearLayout>