<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        
        <EditText
            android:id="@+id/etComponentName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:importantForAutofill="no"
            android:hint="@string/component_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etTakenBy"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:importantForAutofill="no"
            android:hint="@string/taken_by"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etBurrowedDate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:importantForAutofill="no"
            android:hint="@string/burrowed_date"
            android:inputType="datetime"/>

        <EditText
            android:id="@+id/etReturnDate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:importantForAutofill="no"
            android:hint="@string/return_date"
            android:inputType="datetime"/>

        <Button
            android:id="@+id/btnAddLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_log"
            android:layout_marginTop="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>